@@ -1,3 +1,11 @@
+Thu Apr 11 22:07:40 UTC 2002  Don Hinton  <dhinton@ieee.org>
+
+	* netsvcs/lib/Client_Logging_Handler.cpp: Added missing 
+	  Log_Record.h include.	
+
+	* tests/Svc_Handler_Test.cpp:  
+	  Changed ACE_Log_Record::MAXLOGMSGLEN to ACE_MAXLOGMSGLEN.
+
 Thu Apr 11 20:04:22 UTC 2002  Don Hinton  <dhinton@ieee.org>
 
 	* ace/ARGV.h:  Rolled back the change and readded ACE.h. 
