@@ -1,3 +1,9 @@
+Thu Apr 11 22:07:40 UTC 2002  Don Hinton  <dhinton@ieee.org>
+
+	* tao/TAO_IDL/driver/drv_preproc.cpp:  
+	* tao/examples/IFR_Service/drv_preproc.cpp:
+	  Changed ACE_Log_Record::MAXLOGMSGLEN to ACE_MAXLOGMSGLEN.
+	
 Thu Apr 11 11:18:56 2002  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* tests/MT_BiDir/server.dsp (RSC): Fixed it yet again.
